# productivity-app

./: .gitignore  README.md  build_helper.bat  config_template.toml  pyproject.toml
helpers/: window_helper.py
installer/: productivity.iss
src/: components.py  data_types.py  default_config.py  error_checking.py  layouts.py  loader.py  main.py  main_ui.py  notifications.py  setup.py  smart_classifier.py  tests.py  utilities.py  window.py
src/components/: appbar.py  buttons.py  layouts.py  loading_screen.py  notifications.py  text.py
src/core/: data_types.py  utilities.py
src/managers/: error_checking.py  loader.py  smart_classifier.py  window.py
tools/: build_app.py  bump_build.py  post_build_fix.py
